syntax = "proto3";

package health;

option go_package = "github.com/sergicanet9/go-hexagonal-api/proto/gen/go/pb";

import "google/api/annotations.proto";
import "google/api/http.proto";
import "google/protobuf/empty.proto";

service HealthService {
  // HealthCheck returns basic runtime information of the API when the service is up.
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/health"
    };
  }
}

// HealthCheckRequest is the request for the health check.
message HealthCheckRequest {}

// HealthCheckResponse is the response from the health check.
message HealthCheckResponse {
  string version = 1;
  string environment = 2;
  string database = 3;
  int32 httpPort = 4;
  int32 grpcPort = 5;
  string dsn = 6;
}